--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
 	
 	<dependencies>
 		<dependency>
+    		<groupId>javax.annotation</groupId>
+    		<artifactId>javax.annotation-api</artifactId>
+    		<version>1.3.2</version>
+		</dependency>
+		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
 			<version>2.9.7</version>
